--- a/.github/workflows/todoweb-cd.yml
+++ b/.github/workflows/todoweb-cd.yml
@@ -1,4 +1,4 @@
-name: todoweb-github-action # EB 어플리케이션 이름
+name: Todoweb-Server # EB 어플리케이션 이름
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v1 
         with:
-          java-version: 11
+          java-version: 17
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
@@ -48,9 +48,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }} # github secrets로 등록한 값 사용
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # github secrets로 등록한 값 사용
-          application-name: todoweb-github-action # EB application 이름
-          environment_name: todoweb-github-action-env # EB environment 이름
+          application_name: Todoweb-Server # EB application 이름
+          environment_name: Todoweb-Server-env # EB environment 이름
           version_label: Github Action-${{steps.current-time.outputs.formattedTime}} # 배포 버전은 타임스탬프를 이용하여 구분
           region: ap-northeast-2
           deployment_package: deploy/deploy.zip
-          wait_for_environment_recovery: 300 # 
+          wait_for_environment_recovery: 300
